tests/parser-test-files/bad-files/parse-unless.2.coal
;; BAD: Parse Unless
(package test-package)

(define x (unless 1))
